--- a/app/src/main/res/layout/exo_styled_player_control_view.xml
+++ b/app/src/main/res/layout/exo_styled_player_control_view.xml
@@ -166,6 +166,7 @@
       android:color="@android:color/transparent">
 
     <ImageButton
+	android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
@@ -174,6 +175,7 @@
         android:maxHeight="16dp"
         android:minWidth="16dp"
         android:minHeight="16dp"
+	android:translationZ="2dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="12dp"
         android:layout_marginRight="16dp"
