--- a/app/src/main/res/layout/exo_styled_player_control_view.xml
+++ b/app/src/main/res/layout/exo_styled_player_control_view.xml
@@ -29,7 +29,7 @@
   <View android:id="@id/exo_controls_background"
       android:layout_width="0dp"
       android:layout_height="0dp"
-      android:background="@color/exo_bottom_bar_background"
+      android:background="@android:color/transparent"
     />
       <!-- android:background="@color/exo_black_opacity_60"/> -->
 
@@ -160,9 +160,13 @@
 
   </LinearLayout>
 
-  <LinearLayout android:layout_width="wrap_content"
+  <LinearLayout
+			android:id="@+id/upperLayout"
+			android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
+			android:paddingBottom="8dp"
+			android:background="@drawable/gradient"
       android:color="@android:color/transparent">
 
     <ImageButton
@@ -175,31 +179,31 @@
         android:maxHeight="16dp"
         android:minWidth="16dp"
         android:minHeight="16dp"
-	android:translationZ="2dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginRight="16dp"
+	android:translationZ="10dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="32dp"
         android:src="@drawable/arrow_down"
         android:background="@android:color/transparent"/>
 
     <LinearLayout android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="6dp">
+        android:layout_marginTop="8dp">
 
       <TextView
           android:id="@+id/titleView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textColor="@color/black"
-          android:textSize="10sp"></TextView>
+          android:textColor="@color/white"
+          android:textSize="16sp"></TextView>
 
       <TextView
           android:id="@+id/authorView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textColor="@color/black"
-          android:textSize="8sp" />
+          android:textColor="@color/white"
+          android:textSize="12sp" />
     </LinearLayout>
 
   </LinearLayout>
