--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,15 +8,49 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="1080px"
+        android:layout_width="1280px"
         android:layout_height="720px"
         android:layout_marginTop="-1dp"
         android:src="@drawable/ic_launcher_foreground" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
+    <LinearLayout
+	android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="@color/black" />
+        android:orientation="horizontal">
+
+      <ImageView
+        android:id="@+id/iconView"
+        android:layout_width="256px"
+        android:layout_height="256px"
+        android:layout_marginTop="-1dp"
+        android:src="@drawable/ic_launcher_foreground" />
+
+      <LinearLayout
+	  android:padding="8dp"
+	  android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical">
+
+	<TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/black" />
+	
+	<TextView
+            android:id="@+id/authorView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+	    android:text="Hello, World"
+	    android:textSize="12sp"
+	    android:padding="4dp"
+            android:textColor="@color/black" />
+	
+      </LinearLayout>
+	  
+
+      
+    </LinearLayout>
 </LinearLayout>
