--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,24 +6,73 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="1080px"
-        android:layout_height="720px"
-        android:layout_marginTop="-1dp"
-        android:src="@drawable/ic_launcher_foreground" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/relativeLayout">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="1280px"
+                android:layout_height="610px"
+                android:layout_marginTop="-1dp"
+                android:src="@drawable/ic_launcher_foreground" />
+
+            <ImageView
+                android:visibility="gone"
+                android:id="@+id/downloadButton"
+                android:layout_width="128px"
+                android:layout_height="128px"
+                android:gravity="top|left"
+                android:padding="12dp"
+                android:layout_marginTop="24px"
+                android:layout_marginLeft="24px"
+                app:tint="#ffffff"
+                android:background="@color/grey"
+                android:src="@drawable/herunterladen"/>
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/relativeLayout"
+            android:layout_alignTop="@id/relativeLayout"
+            android:layout_alignRight="@id/relativeLayout"
+            android:layout_alignBottom="@id/relativeLayout"
+            android:layout_marginRight="24px"
+            android:layout_marginBottom="24px"
+            android:gravity="right|bottom">
+
+            <TextView
+                android:id="@+id/duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/grey"
+                android:padding="4dp"
+                android:textColor="@color/light_font"
+                android:textSize="12dp"
+                android:textStyle="bold"
+                android:visibility="gone" />
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="192px"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iconView"
             android:layout_width="128px"
             android:layout_height="128px"
-            android:layout_marginTop="-1dp"
             android:layout_gravity="center"
+            android:layout_marginTop="-1dp"
             android:src="@drawable/ic_launcher_foreground" />
 
         <LinearLayout
