--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,6 +2,14 @@
     app:actionViewClass="android.support.v7.widget.SearchView"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/connectButton"
+        android:title=""
+        app:showAsAction="collapseActionView|ifRoom"
+        android:icon="@drawable/connect"
+        android:iconifiedByDefault="false"
+        app:actionViewClass="android.widget.SearchView">
+    </item>
 
     <item
         android:id="@+id/myButton"
@@ -11,5 +19,7 @@
         android:iconifiedByDefault="false"
         app:actionViewClass="android.widget.SearchView">
     </item>
+
+
 
 </menu>
