--- a/app/src/main/res/layout/activity_fullsscreen_player.xml
+++ b/app/src/main/res/layout/activity_fullsscreen_player.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:keepScreenOn="true">>
 
-    <com.jschartner.youtube.JexoPlayerView
+    <com.jschartner.youtubebase.JexoPlayerView
         android:id="@+id/player_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
