--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -29,7 +29,7 @@
         android:background="@color/black"
         android:orientation="vertical">
 
-        <com.jschartner.youtube.JexoPlayerView
+        <com.jschartner.youtubebase.JexoPlayerView
             android:id="@+id/playerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
