--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -12,7 +12,7 @@
         android:background="@color/black"
         android:orientation="vertical">
 
-        <com.jschartner.youtube.JexoPlayerView
+        <com.jschartner.youtubebase.JexoPlayerView
             android:id="@+id/player_view"
             android:layout_width="wrap_content"
             android:layout_height="620px"
