--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -31,7 +31,7 @@
         android:visibility="gone"
         android:orientation="vertical">
 
-        <com.jschartner.youtube.JexoPlayerView
+        <com.jschartner.youtubebase.JexoPlayerView
             android:id="@+id/playerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
