duration and title

--- a/youtube-base/src/main/res/layout/exo_styled_player_control_view.xml
+++ b/youtube-base/src/main/res/layout/exo_styled_player_control_view.xml
@@ -69,4 +69,59 @@
         app:layout_constraintVertical_bias="0.019"
         app:srcCompat="@drawable/arrow_down" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintHorizontal_bias="0.12"
+        app:layout_constraintVertical_bias="0.016"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/titleView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/myWhite"
+            android:textSize="20dp"
+            tools:layout_editor_absoluteX="101dp"
+            tools:layout_editor_absoluteY="16dp" />
+
+        <TextView
+            android:id="@+id/authorView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/myWhite"
+            android:textSize="14dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/durationLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintVertical_bias="0.86"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView android:id="@id/exo_position"
+            android:textSize="14dp"
+            style="@style/ExoStyledControls.TimeText.Position"/>
+        <TextView
+            style="@style/ExoStyledControls.TimeText.Separator"/>
+        <TextView android:id="@id/exo_duration"
+            android:textSize="14dp"
+            style="@style/ExoStyledControls.TimeText.Duration"/>
+
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
